--- a/basic/.gitignore
+++ b/basic/.gitignore
@@ -26,6 +26,6 @@ phpunit.phar
 # local phpunit config
 /phpunit.xml
 
-web/uploads/*
-web/assets/*
-runtime/*
+/web/uploads/*
+/web/assets/*
+/runtime/*
