--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-.idea/*
+# phpstorm project files
+.idea
+
+# netbeans project files
+nbproject
+
+# zend studio for eclipse project files
+.buildpath
+.project
+.settings
