--- a/basic/composer.json
+++ b/basic/composer.json
@@ -18,14 +18,18 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "gufy/pdftohtml-php":"~2"
+        "gufy/pdftohtml-php":"~2",
+        "yiisoft/yii2-swiftmailer": "*",
+        "dektrium/yii2-user": "*"
 
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+        "yiisoft/yii2-swiftmailer": "*",
+        "robregonm/yii2-auth": "*"
     },
     "config": {
         "process-timeout": 1800
