--- a/basic/composer.json
+++ b/basic/composer.json
@@ -19,8 +19,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "gufy/pdftohtml-php":"~2",
-        "yiisoft/yii2-swiftmailer": "*",
-        "kartik-v/yii2-grid": "@dev"
+        "yiisoft/yii2-swiftmailer": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
