--- a/basic/composer.json
+++ b/basic/composer.json
@@ -20,7 +20,7 @@
         "yiisoft/yii2-swiftmailer": "*",
         "gufy/pdftohtml-php":"~2",
         "yiisoft/yii2-swiftmailer": "*",
-        "kartik-v/yii2-widget-depdrop": "@dev"
+        "yiisoft/yii2-sphinx": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
