--- a/basic/composer.json
+++ b/basic/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "gufy/pdftohtml-php":"~2",
         "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-sphinx": "~2.0.0"
+        "yiisoft/yii2-sphinx": "~2.0.0",
+        "nategood/httpful": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
